--- a/src/app/pages/departments/departments.html
+++ b/src/app/pages/departments/departments.html
@@ -6,7 +6,7 @@
       <p class="text-gray-500">Manage hospital departments and assignments</p>
     </div>
     <button
-      (click)="addDepartment()"
+      
       class="bg-pro cursor-pointer text-white px-4 py-2 rounded-lg transition hover:bg-pro-hover"
     >
       + Add Department
@@ -38,13 +38,13 @@
           <td class="py-3 px-4">{{ dep.staffCount }}</td>
           <td class="py-3 px-4 flex justify-center gap-2">
             <button
-              (click)="editDepartment(dep)"
+              
               class="text-gray-600 hover:text-pro transition px-3 py-1 rounded text-sm cursor-pointer"
             >
               <i class="fa-regular fa-pen-to-square"></i>
             </button>
             <button
-              (click)="confirmDelete(dep._id)"
+              
               class="text-red1 hover:text-red-600 transition px-3 py-1 rounded text-sm cursor-pointer"
             >
               <i class="fa-regular fa-trash-can"></i>
@@ -149,9 +149,9 @@
           class="peer border border-gray-300 focus:border-pro focus:ring-1 focus:ring-pro p-3 w-full rounded-md outline-none transition bg-white appearance-none"
         >
           <option value="" disabled selected hidden></option>
-          <option *ngFor="let manager of managers" [value]="manager">
+          <!-- <option *ngFor="let manager of managers" [value]="manager">
             {{ manager }}
-          </option>
+          </option> -->
         </select>
         <label
           for="deptManager"
@@ -163,7 +163,7 @@
         </label>
       </div>
     </div>
-
+<!-- 
     <div class="flex justify-end gap-3 mt-8">
       <button
         (click)="showForm = false"
@@ -177,7 +177,7 @@
       >
         {{ selectedDepartment ? 'Update' : 'Create' }}
       </button>
-    </div>
+    </div> -->
   </div>
 </div>
 
@@ -196,7 +196,7 @@
       <p class="text-gray-500 mb-6">
         Are you sure you want to delete this department?
       </p>
-      <div class="flex justify-center gap-4">
+      <!-- <div class="flex justify-center gap-4">
         <button
           (click)="deleteDepartmentConfirmed()"
           class="bg-red-600 hover:bg-red-700 text-white px-5 py-2 rounded-md font-medium transition"
@@ -209,7 +209,7 @@
         >
           Cancel
         </button>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
